--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>groupId</groupId>
     <artifactId>week-two-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>12</maven.compiler.source>
