--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,18 @@
             <version>5.8.1</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
     </dependencies>
+
+
 
     <properties>
         <maven.compiler.source>12</maven.compiler.source>
